--- a/src/content/graphos/basics/routing.mdx
+++ b/src/content/graphos/basics/routing.mdx
@@ -21,7 +21,7 @@ The router intelligently executes each incoming client operation across the appr
 
 ## GraphOS Router types
 
-GraphOS comes with a fully integrated router runtime called the _GraphOS Router_.
+GraphOS comes with a fully integrated router called the _GraphOS Router_.
 You can choose for Apollo to provision and manage a cloud-hosted GraphOS Router for you:
 
 ```mermaid
