--- a/src/content/graphos/cloud-routing/dedicated/lattice.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/lattice.mdx
@@ -305,7 +305,7 @@ The next steps differ depending on whether you're creating a [new graph](#setup-
   </Note>
 
 6. Paste the ARN of the resource share you created and copied from your AWS Console, then click **Link my Resource** and **Next** to continue.
-7. From the dropdown menu, select the Lattice service that you want to connect to your GraphOS router. The URL automatically appends a default path of `/api/graphql`, but you can change this path if you want to.
+7. From the dropdown menu, select the Lattice service that you want to connect to your GraphOS Router. The URL automatically appends a default path of `/api/graphql`, but you can change this path if you want to.
 8. Add a **Service Name** to describe your Lattice service. GraphOS Studio uses this name to identify your Lattice service.
 9. Paste the GraphQL schema for this subgraph in the **Schema** field. You can also upload a schema file by clicking the **Upload Schema** button.
 
