--- a/src/content/graphos/cloud-routing/serverless/aws-migration.mdx
+++ b/src/content/graphos/cloud-routing/serverless/aws-migration.mdx
@@ -37,7 +37,7 @@ Don't hesitate to contact [cloud@apollographql.com](mailto:cloud@apollographql.c
 ## What's changing?
 
 The move to AWS improves reliability and performance. It also changes the cloud hosting region and inactivity periods.
-With improved reliability and performance, Serverless can offer additional GraphOS router features. Refer to the [pricing page](https://www.apollographql.com/pricing#graphos-router) for the full list of supported features.
+With improved reliability and performance, Serverless can offer additional GraphOS Router features. Refer to the [pricing page](https://www.apollographql.com/pricing#graphos-router) for the full list of supported features.
 
 ### Reliable throughput
 
