--- a/src/content/graphos/enterprise/index.mdx
+++ b/src/content/graphos/enterprise/index.mdx
@@ -57,7 +57,7 @@ This architecture helps you satisfy sophisticated requirements around data compl
 
 </Tip>
 
-### Premium GraphOS router features
+### Premium GraphOS Router features
 
 <GraphOSRouterFeatures />
 
