--- a/src/content/graphos/basics/routing.mdx
+++ b/src/content/graphos/basics/routing.mdx
@@ -19,7 +19,7 @@ flowchart LR;
 
 The router intelligently executes each incoming client operation across the appropriate combination of subgraphs. It then merges subgraph responses into a single response for the client. You can configure your router's error handling, CORS settings, other security features, and more. Your configuration options depend on your router type.
 
-## GraphOS Router types
+## Router types
 
 GraphOS comes with a fully integrated router called the _GraphOS Router_.
 You can choose for Apollo to provision and manage a cloud-hosted GraphOS Router for you:
