--- a/src/content/graphos/enterprise/index.mdx
+++ b/src/content/graphos/enterprise/index.mdx
@@ -57,11 +57,11 @@ This architecture helps you satisfy sophisticated requirements around data compl
 
 </Tip>
 
-### Premium GraphOS Router features
+### GraphOS Router features
 
 <GraphOSRouterFeatures />
 
-[Learn more about premium GraphOS features.](/router/enterprise-features/)
+[Learn more about GraphOS features.](/router/enterprise-features/)
 
 ## Schema pipeline
 
